--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Run chart-testing (list-changed)
         id: list-changed
         run: |
-          changed=$(ct list-changed --targer-branch master)
+          changed=$(ct list-changed --targer-branch $GITHUB_REF)
           if [[ -n "$changed" ]]; then
             echo "::set-output name=changed::true"
           fi
