--- a/charts/routingservice/values.yaml
+++ b/charts/routingservice/values.yaml
@@ -11,8 +11,8 @@ image:
   tag: latest
 
 imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
+# nameOverride: ""
+# fullnameOverride: ""
 
 env: []
 
