--- a/charts/library-charts/servicelibrary/Chart.yaml
+++ b/charts/library-charts/servicelibrary/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: routingservice
+name: servicelibrary
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -10,12 +10,12 @@ description: A Helm chart for Kubernetes
 # Library charts provide useful utilities or functions for the chart developer. They're included as
 # a dependency of application charts to inject those utilities and functions into the rendering
 # pipeline. Library charts do not define any templates and therefore cannot be deployed.
-type: application
+type: library
 
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.2.0
+version: 0.1.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -25,8 +25,3 @@ appVersion: 0.0.1
 
 maintainers:
   - name: me
-
-dependencies:
-  - name: servicelibrary
-    version: 0.1.0
-    repository: file://../library-charts/servicelibrary
