--- a/charts/routingservice/templates/networkpolicy.yaml
+++ b/charts/routingservice/templates/networkpolicy.yaml
@@ -1,20 +1,1 @@
-kind: NetworkPolicy
-apiVersion: networking.k8s.io/v1
-metadata:
-  name: {{ include "routingservice.fullname" . }}
-  labels:
-    {{- include "routingservice.labels" . | nindent 4 }}
-spec:
-  podSelector:
-    matchLabels:
-      {{- include "routingservice.selectorLabels" . | nindent 6 }}
-  policyTypes:
-    {{ .Values.networkPolicy.policyTypes }}
-  ingress:
-    {{if has "ingress" .Values.networkPolicy.policyTypes }}
-      {{ .Values.networkPolicy.ingress }}
-    {{ end }}
-  egress:
-    {{if has "egress" .Values.networkPolicy.policyTypes }}
-      {{ .Values.networkPolicy.egress }}
-    {{ end }}
+{{- include "servicelibrary.networkpolicy.tpl" . -}}
