--- a/charts/routingservice/templates/pdb.yaml
+++ b/charts/routingservice/templates/pdb.yaml
@@ -1,11 +1,1 @@
-apiVersion: policy/v1
-kind: PodDisruptionBudget
-metadata:
-  name: {{ include "routingservice.fullname" . }}
-  labels:
-    {{- include "routingservice.labels" . | nindent 4 }}
-spec:
-  minAvailable: {{ .Values.autoscaling.minReplicas }}
-  selector:
-    matchLabels:
-      {{- include "routingservice.selectorLabels" . | nindent 6 }}
+{{- include "servicelibrary.pdb.tpl" . -}}
