--- a/charts/routingservice/templates/service.yaml
+++ b/charts/routingservice/templates/service.yaml
@@ -1,15 +1,1 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: {{ include "routingservice.fullname" . }}
-  labels:
-    {{- include "routingservice.labels" . | nindent 4 }}
-spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
-  selector:
-    {{- include "routingservice.selectorLabels" . | nindent 4 }}
+{{- include "servicelibrary.service.tpl" . -}}
