--- a/charts/library-charts/servicelibrary/templates/_ingress.yaml
+++ b/charts/library-charts/servicelibrary/templates/_ingress.yaml
@@ -45,3 +45,7 @@ spec:
     {{- end }}
 {{- end }}
 {{- end }}
+
+{{- define "servicelibrary.ingress" -}}
+{{- include "servicelibrary.util.merge" (append . "servicelibrary.ingress.tpl") -}}
+{{- end -}}
