--- a/charts/library-charts/servicelibrary/templates/_service.yaml
+++ b/charts/library-charts/servicelibrary/templates/_service.yaml
@@ -15,3 +15,7 @@ spec:
   selector:
     {{- include "servicelibrary.selectorLabels" . | nindent 4 }}
 {{- end }}
+
+{{- define "servicelibrary.service" -}}
+{{- include "servicelibrary.util.merge" (append . "servicelibrary.service.tpl") -}}
+{{- end -}}
