--- a/charts/library-charts/servicelibrary/templates/_serviceaccount.yaml
+++ b/charts/library-charts/servicelibrary/templates/_serviceaccount.yaml
@@ -12,3 +12,7 @@ metadata:
   {{- end }}
 {{- end }}
 {{- end }}
+
+{{- define "servicelibrary.serviceaccount" -}}
+{{- include "servicelibrary.util.merge" (append . "servicelibrary.serviceaccount.tpl") -}}
+{{- end -}}
