--- a/charts/library-charts/servicelibrary/templates/_deployment.yaml
+++ b/charts/library-charts/servicelibrary/templates/_deployment.yaml
@@ -9,6 +9,7 @@ spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
+  revisionHistoryLimit: 2
   selector:
     matchLabels:
       {{- include "servicelibrary.selectorLabels" . | nindent 6 }}
@@ -46,10 +47,20 @@ spec:
             httpGet:
               path: /health
               port: http
+            failureThreshold: 3
+            periodSeconds: 60
           readinessProbe:
             httpGet:
               path: /health
               port: http
+            failureThreshold: 3
+            periodSeconds: 10
+          # startupProbe:
+          #   httpGet:
+          #     path: /health
+          #     port: http
+          #   failureThreshold: 30
+          #   periodSeconds: 10
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
@@ -64,4 +75,8 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+{{- end -}}
+
+{{- define "servicelibrary.deployment" -}}
+{{- include "servicelibrary.util.merge" (append . "servicelibrary.deployment.tpl") -}}
 {{- end -}}
