--- a/charts/searchservice/values.yaml
+++ b/charts/searchservice/values.yaml
@@ -1,11 +1,11 @@
-# Default values for routingservice.
+# Default values for searchservice.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: ghcr.io/andidroid/testgo/routingservice
+  repository: ghcr.io/andidroid/testgo/searchservice
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: latest
@@ -54,7 +54,7 @@ ingress:
   hosts:
     - host: host.kubernetes.internal
       paths:
-        - path: /routing/?(.*)
+        - path: /search/?(.*)
           pathType: ImplementationSpecific
   tls: []
   #  - secretName: host.kubernetes.internal-tls
