--- a/charts/routingservice/values.yaml
+++ b/charts/routingservice/values.yaml
@@ -13,6 +13,8 @@ image:
 imagePullSecrets: []
 # nameOverride: ""
 # fullnameOverride: ""
+component: backend
+partOf: fleet
 
 env: []
 
@@ -25,7 +27,10 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
-podAnnotations: {}
+podAnnotations:
+  prometheus.io/scrape: "true"
+  prometheus.io/port: "80"
+  prometheus.io/path: "/metrics"
 
 podSecurityContext:
   {}
