--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,13 +1,13 @@
 name: Lint and Test Charts
 
-on: 
+on:
   pull_request:
   workflow_dispatch:
   push:
     branches:
-      - 'master'
-      - 'feature/**'
-      - 'release/**'
+      - "master"
+      - "feature/**"
+      - "release/**"
 jobs:
   lint-test:
     runs-on: ubuntu-latest
@@ -24,7 +24,7 @@ jobs:
 
       - uses: actions/setup-python@v3.1.2
         with:
-          python-version: '3.10.4'
+          python-version: "3.10.4"
 
       - name: Set up chart-testing
         uses: helm/chart-testing-action@v2.2.1
@@ -70,9 +70,9 @@ jobs:
       - name: Run Datree Policy Check
         uses: datreeio/action-datree@main
         with:
-          path: 'charts/${{ matrix.service }}'
+          path: "charts/${{ matrix.service }}"
           isHelmChart: true
-          cliArguments: '--schema-version 1.23.0'
-          helmArguments: '--values values.yaml'
+          cliArguments: "--schema-version 1.23.0"
+          # helmArguments: '--values values.yaml'
         env:
-          DATREE_TOKEN: ${{ secrets.DATREE_TOKEN }} 
+          DATREE_TOKEN: ${{ secrets.DATREE_TOKEN }}
