update helm charts

--- a/charts/library-charts/servicelibrary/templates/_deployment.yaml
+++ b/charts/library-charts/servicelibrary/templates/_deployment.yaml
@@ -20,7 +20,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "servicelibrary.selectorLabels" . | nindent 8 }}
+        {{- include "servicelibrary.labels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
