--- a/charts/gorouting-umbrella/Chart.yaml
+++ b/charts/gorouting-umbrella/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: servicelibrary
-description: A Helm chart for Kubernetes
+name: gorouting-umbrella
+description: A umbrella Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -10,18 +10,34 @@ description: A Helm chart for Kubernetes
 # Library charts provide useful utilities or functions for the chart developer. They're included as
 # a dependency of application charts to inject those utilities and functions into the rendering
 # pipeline. Library charts do not define any templates and therefore cannot be deployed.
-type: library
+type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.2
+version: 0.2.1
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: 0.0.1
+appVersion: "1.16.0"
 
-maintainers:
-  - name: me
+# https://andidroid.github.io/gorouting-gitops/index.yaml
+dependencies:
+  - name: fleetservice
+    repository: https://andidroid.github.io/gorouting-gitops
+    version: 0.2.1
+    alias: fleetservice
+  - name: messagingservice
+    repository: https://andidroid.github.io/gorouting-gitops
+    version: 0.2.1
+    alias: messagingservice
+  - name: routingservice
+    repository: https://andidroid.github.io/gorouting-gitops
+    version: 0.2.1
+    alias: routingservice
+  - name: searchservice
+    repository: https://andidroid.github.io/gorouting-gitops
+    version: 0.2.1
+    alias: searchservice
