--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: Set up Helm
         uses: azure/setup-helm@v3.3
         with:
-          version: v3.8.1
+          version: v3.10.0
 
       - uses: actions/setup-python@v4.3.0
         with:
@@ -28,6 +28,9 @@ jobs:
 
       - name: Set up chart-testing
         uses: helm/chart-testing-action@v2.3.1
+
+      - name: Dependency Update
+        run: helm dependency update
 
       - name: Run chart-testing (list-changed)
         id: list-changed
